--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ exclude:
    - README.md
 
 # Theme settings
-remote_theme: just-the-docs/just-the-docs@v0.3.3
+#remote_theme: just-the-docs/just-the-docs@v0.3.3
 
 # Collections for web data
 collections:
